--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+beautifulsoup4==4.4.0
 Django==1.8.3
 ecdsa==0.13
 Fabric==1.10.2
+httplib2==0.9.1
 mysql==0.0.1
 MySQL-python==1.2.5
+nflgame==1.2.15
 paramiko==1.15.2
 pycrypto==2.6.1
+pytz==2015.4
 South==1.0.2
